--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                 Join the ranks. Make your mark. Become Oskoreia.
             </p>
         </div>
+        <div style="margin: 2em auto; max-width: 700px;">
+            <img src="crew-image.png" alt="Oskoreia Crew" style="width:100%;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.3);">
+        </div>
+        <!-- <div class="events-section" style="max-width:700px;margin:2em auto 2.5em auto;padding:1.5em;background:rgba(25,30,50,0.85);border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.2);color:#fff;">
+            <h3 style="margin-top:0;">Upcoming Discord Events</h3>
+            <iframe src="https://discord.com/widget?id=1077762796890103838&theme=dark" width="100%" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <p style="font-size:0.95em;color:#ccc;margin-top:1em;">
+                Join our <a href="https://discord.gg/PvMqereg" target="_blank" rel="noopener" style="color:#7abaff;">Discord server</a> to see and participate in all upcoming events!
+            </p>
+        </div> -->
         <div class="button-group">
             <a href="https://discord.gg/PvMqereg" class="btn" target="_blank" rel="noopener">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" style="vertical-align:middle; margin-right:8px; fill:#fff;">
