Added discord pages, multiple header images.

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,13 +3,8 @@ layout: default
 title: Oskoreia - Star Citizen Organisation
 permalink: /
 ---
-<header class="hero">
-    <!-- <div class="hero-bg-video" id="bg-video"></div> -->
-    <div class="hero-content">
-        <h1 class="hero-title">Oskoreia</h1>
-        <p class="hero-subtitle">Join the ranks. Make your mark. Become Oskoreia.</p>
-    </div>
-</header>
+{% include hero.html %}
+
 {% include link-bar.html %}
 
 <main class="main-content">
