--- a/pages/ships.html
+++ b/pages/ships.html
@@ -4,6 +4,7 @@ title: Oskoreia - All ships
 permalink: /ships/
 ---
 <link rel="stylesheet" href="/assets/styles/ships.css" />
+{% include hero.html header=1 %}
 {% include link-bar.html %}
 
 <h2 class="ships-title">All Ships</h2>
