--- a/pages/members.html
+++ b/pages/members.html
@@ -12,6 +12,8 @@ rankOrder:
 ---
 <link rel="stylesheet" href="/assets/styles/members.css" />
 
+{% include hero.html header=2 %}
+
 <!-- For some reason the high admial is missing -->
 {% assign members = site.data.organization_members.data | concat: site.data.organization_founder  %}
 
