--- a/pages/ships.html
+++ b/pages/ships.html
@@ -4,7 +4,6 @@ title: Oskoreia - All ships
 permalink: /ships/
 ---
 <link rel="stylesheet" href="/assets/styles/ships.css" />
-<link rel="stylesheet" href="/assets/styles/ship.css" />
 {% include hero.html header=1 %}
 {% include link-bar.html %}
 
@@ -86,24 +85,15 @@ permalink: /ships/
     renderShips(filtered);
   });
 
-  function renderShip(ship) {
-    return `{% include ship-template.html %}`;
-  }
-
-  function showShip(ship) {
-    window.location.hash = ship.code;
-    showModal(ship.name, renderShip(ship));
-  }
-
   function openShipFromHash() {
     const hash = window.location.hash.substring(1);
     const ship = ships.find(s => s.code.toLowerCase() === hash.toLowerCase());
     if (ship) {
-      showShip(ship);
+      showShipModal(ship);
     }
   }
 
   window.addEventListener('hashchange', openShipFromHash);
   window.addEventListener('DOMContentLoaded', openShipFromHash);
 </script>
-{% include modal.html %}
+{% include ship-modal.html %}
