Updated fleet, added 3d cube for ship dimension. Dynamic time representation.

--- a/pages/fleet.html
+++ b/pages/fleet.html
@@ -18,10 +18,20 @@ fleet:
     - idris-m
     st3vie:
     - cutlass-black
+    Drakainous:
+    - asgard
+    - p-52-merlin
+    - avenger-titan
+    - vulture
+    - roc
+    - galaxy
+    - perseus
+    kahuna26:
+    - mustang-alpha
 ---
 
 <link rel="stylesheet" href="/assets/styles/fleet.css" />
-{% include hero.html header=1 %}
+{% include hero.html header=5 %}
 {% include link-bar.html %}
 
 <div class="fleet-grid-container">
