Updated websites with ship components.

--- a/pages/ships.html
+++ b/pages/ships.html
@@ -3,6 +3,7 @@ layout: default
 title: Oskoreia - All ships
 permalink: /ships/
 ---
+<script src="/assets/scripts/ships.js"></script>
 <link rel="stylesheet" href="/assets/styles/ships.css" />
 {% include hero.html header=1 %}
 {% include link-bar.html %}
