Fixed js error, made components uncollapsed by default.

--- a/pages/fleet.html
+++ b/pages/fleet.html
@@ -30,6 +30,7 @@ fleet:
     - mustang-alpha
 ---
 
+<script src="/assets/scripts/ships.js"></script>
 <link rel="stylesheet" href="/assets/styles/fleet.css" />
 {% include hero.html header=5 %}
 {% include link-bar.html %}
